react-rounter implementation

--- a/src/index.handlebars
+++ b/src/index.handlebars
@@ -9,7 +9,7 @@
       {{{ content }}}
     </div>
     <script>
-      window.BOOTSTRAP = {{{ bootstrap }}}
+      window.BOOTSTRAP = "{{{ bootstrap }}}";
     </script>
     <script src="/assets/scripts/client.js"></script>
   </body>
